static/css/main.css
/* @import url("../fonts/Montserrat-Regular.ttf"); */
/* @import url("../fonts/Montserrat-Light.ttf"); */
@import url('https://fonts.googleapis.com/css2?family=Courier+Prime&family=Montserrat:wght@300;400;500&display=swap');

/****** CI branding ******/
:root {
  /* p - primary, s - secondary */
  --p-orange: #e84610;
  --p-blue: #009fe3;
  --p-grey: #4a4a4f;
  --p-navy: #445261;
  --p-red: #d63649;
  --s-grey: #e6ecf0;
  --s-yellow: #efb920;
  --s-pink: #ff5a60;
  --s-teal: #23bbbb;
  --bg-grey: #f5f5f5;
  --topbar-grey: #8798AD;
  --table-darkgrey: #e9e7e7;
}

/*
--------------------------
        TODO LIST
--------------------------
- Align navbar icons when they have been chosen and finalised
*/

/*** General styles ***/
body {
  font-family: 'Montserrat', sans-serif;
  color: var(--p-navy);
}

main {
  background-color: var(--p-navy);
  min-height: 100vh;
  width: calc(100% - 70px);
  margin-left: auto;
}

p, #document-menu > li > a {
  color: var(--p-navy);
  font-size: 12px;
  font-weight: 500;
  letter-spacing: 1.12px;
  line-height: 14px;
}

a:hover {
  text-decoration: none;
}

.branded-btn {
  background-color: var(--s-teal);
  color: #fff;
}

.no-floating-footer {
  min-height: 100vh;
}

/* Override Bootstrap's Display classes to set the lighter font weight on all. 
*  By default, only some have the lighter font weight, which forms inconsistencies
*  in the frontend design.
*/
.display-1, .display-2, .display-3,
.display-4, .display-5, .display-6 {
  font-weight: 300;
}

h1, h2, h3,
h4, h5, h6 {
  font-weight: 300;
}

noscript {
  width: 100%;
  background-color: var(--p-red);
  z-index: 100;
  position: fixed;
  top: 40%;
  left: 0;
  padding: 20px;
}

noscript > p {
  font-size: 1.5rem;
  color: var(--t-grey);
  line-height: normal !important;
}
/*** /.General styles ***/

/*** Sidenav ***/
#burger-menu a {
  position: relative;
  left: 35%;
  top: 25%;
  color: var(--p-grey);
}

#burger-menu {
  position: fixed;
  height: 60px;
  width: 70px;
  font-size: 1.5rem;
  z-index: 4;
}

#sidenav {
  background-color: #fff;
  width: 70px;
  height: 100%;
  position: fixed;
  left: 0;
  z-index: 3;
  box-shadow: 5px 3px 0 0 rgba(0,0,0,0.16), 0 2px 0 0 rgba(0,0,0,0.12);
  transition: 0.5s;
}

#sidenav-list {
  position: absolute;
  top: 160px;
  left: 0;
  list-style-type: none;
  padding: 0;
  width: 100%;
}

#sidenav-list > li > a {
  padding: 10px 22px;
  color: var(--p-grey);
  font-size: 1.6rem;
  display: block;
}

/* Fixed width for the icons keeps the nav link text in line vertically */
#sidenav-list > li > a > i {
  width: 30px;
}

#sidenav-list > li > a > p {
  position: relative;
  bottom: 6px;
  display: inline;
  font-size: 12px;
  padding-left: 20px;
  margin: 0;
}

/* #skinny-nav-list > li:nth-last-child(2) > a > p {
  padding-left: 26px;
} */

#sidenav-list > li > a:hover {
  background-color: rgba(0,0,0,0.08);
  border-left: 3px solid var(--p-orange);
  transition: 0.1s;
}

.sidenav-profile {
  height: 100px;
  padding-left: 15px;
  padding-top: 15px;
}

.sidenav-profile > p {
  display: inline;
  padding-left: 10px;
  font-weight: bold;
  text-transform: uppercase;
}

#sidenav-overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 120vh;
  background-color: rgba(0,0,0,0.5);
  z-index: 2;
}

#document-menu {
  list-style-type: none;
  background-color: rgba(0,0,0,0.08);
}

#document-menu > li {
  padding: 7px 30px;
  font-size: 0.9rem;
  color: var(--p-grey);
}

#document-menu > li > a {
  color: var(--p-grey);
}

#document-menu > li > a:hover {
  color: var(--p-orange);
}

/*** /.Sidenav ***/

/*** Page top section ***/
#top-bar {
  width: calc(100% - 60px);
  margin-left: auto;
  background-color: var(--topbar-grey);
}

#top-bar-brand {
  font-weight: 300;
  letter-spacing: 1.2px;
  font-size: 2.5rem;
  color: #fff;
  padding: 0 10px;
  text-shadow: #000 2px 3px 8px;
}

#top-bar-divider {
  width: 100%;
  height: 10px;
  background-color: #fff;
}

/* Logo is an SVG in the HTML */
.ci-logo {
  filter: drop-shadow(2px 3px 3px rgb(0 0 0 / 0.4));
  margin-bottom: 5px;
}
/*** /.Page top section ***/

/*** Media Queries ***/
@media screen and (max-width: 1200px) {
  /* Override Boostrap's Display classes with the Bootstrap 5 values, as these are responsive on smaller screens (but not in v4).
  *  These values have been taken directly from Bootstrap 5's open source code, available here:
  *  https://getbootstrap.com/docs/5.0/getting-started/download/
  */
  .display-1 {
    font-size: calc(1.625rem + 4.5vw);
  }

  .display-2 {
    font-size: calc(1.575rem + 3.9vw);
  }

  .display-3 {
    font-size: calc(1.525rem + 3.3vw);
  }

  .display-4 {
    font-size: calc(1.475rem + 2.5vw);
  }

  .display-5 {
    font-size: calc(1.425rem + 2.1vw);
  }

  .display-6 {
    font-size: calc(1.375rem + 1.5vw);
  }
}

@media screen and (max-width: 992px) {
  /* Accommodates the smaller navbar for tablets */
  main {
    width: calc(100% - 50px);
  }

  #burger-menu {
    width: 45px;
  }

  #sidenav {
    width: 50px;
  }

  .sidenav-profile {
    padding-left: 5px;
  }

  #sidenav-list > li > a {
    padding: 10px 15px;
    font-size: 1.5rem;
  }

  #top-bar {
    width: calc(100% - 40px);
  }

  #document-menu > li {
    padding: 5px 20px;
  }
}

@media screen and (max-width: 576px) {
  main {
    width: 100%;
    padding: 0 20px;
  }

  #sidenav {
    /* Bit extra needed on the Left property compared to the Width to hide the box-shadow off-screen */
    left: -260px;
    width: 250px;
  }

  #top-bar {
    width: 100%;
  }

  #top-bar-brand {
    padding: 0 40px;
  }

  #top-bar-search {
    padding: 15px 0 15px 40px;
  }

  #top-bar-search > input {
    width: 80%;
  }

  #burger-menu > a {
    color: #fff;
    text-shadow: var(--p-grey) 2px 2px 2px;
  }
}

